kpt/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kpt-dev # kpt-set: ${namespace}
