kpt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: selfsigned
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
  name: nginx
  namespace: dev-kpt # kpt-set: ${environment}-kpt
spec:
  ingressClassName: alb
  rules:
  - host: dev-kpt.largelyconjecture.com # kpt-set: ${environment}-kpt.largelyconjecture.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web-svc # kpt-set: ${app-name}-svc
            port:
              number: 80
  tls:
  - hosts:
    - dev-kpt.largelyconjecture.com # kpt-set: ${environment}-kpt.largelyconjecture.com
    secretName: cert-secret
